# CUDA_Matrix_Mul

./: .gitignore  CMakeLists.txt  LICENSE
src/: cuda.slurm  cuda10000.slurm  cudaSizeInput.slurm  mmm_template.cu  vector_add.cu
